# my-first-bed

./: .gitignore  Cargo.toml  memory.x  openocd.cfg  openocd.gdb
src/: main.rs
