[package]
authors = ["rHermes <teodor_spaeren@riseup.net>"]
edition = "2018"
readme = "README.md"
name = "my-first-bed"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.3"
cortex-m-rt = "0.6.13"
cortex-m-semihosting = "0.3.5"
panic-halt = "0.2.0"


[dependencies.stm32f7xx-hal]
# version = "0.1.0"
features = ["stm32f767", "rt", "usb_fs"]
git = "https://github.com/stm32-rs/stm32f7xx-hal.git"

# [dependencies.stm32f7]
# git = "https://github.com/stm32-rs/stm32-rs-nightlies"
# features = ["stm32f7x7", "rt"]

# this lets you use `cargo fix`!
[[bin]]
name = "4x4-led-matrix"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
